Fixed vertical alignment of dropdown menu

--- a/www/modules/common.css
+++ b/www/modules/common.css
@@ -127,7 +127,7 @@ body {
     min-width: 90%;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
-    margin: 15px 0 0 -50px;
+    margin: 17px 0 0 -50px;
     height: 1000px;
 }
 
@@ -163,7 +163,7 @@ body {
 
     #navbar-dropdown-content {
         display: none;
-        margin: 16px 0 0 -140px;
+        margin: 17px 0 0 -140px;
     }
 
     #nav-links-dropdown-button {
